package edu.fiuba.algo3.modelo;

public abstract class TipoDeVehiculo {
    public abstract int calcularPenalizacion (Obstaculo unObstaculo);

}
