package edu.fiuba.algo3.modelo;

public class cuatroPorCuatro extends TipoDeVehiculo {

    public cuatroPorCuatro () {
    }

    public int calcularPenalizacion (Obstaculo unObstaculo) {
        return 0;
    }
}