@startuml
abstract class TipoDeVehiculo {
    + {abstract} calcularPenalizacion (Obstaculo unObstaculo): int
}
class Moto {
    + calcularPenalizacion (Obstaculo unObstaculo): int
}
class CuatroPorCuatro {
- int pozosAtrevezados
+ calcularPenalizacion (Obstaculo unObstaculo): int
}
class Auto {
   + calcularPenalizacion (Obstaculo unObstaculo): int
}
Moto --|> TipoDeVehiculo
Auto --|> TipoDeVehiculo
CuatroPorCuatro  --|> TipoDeVehiculo

@enduml